style.css
html,
body {
  height: 100%;

  font-family: 'Roboto', sans-serif;
  -webkit-font-smoothing: antialiased;

  --gray: hsl(240, 9%, 89%);
  --black: hsl(240, 6%, 13%);
}

body {
  display: grid;
  place-items: center;  
  margin: 0;
}

main {
  background: url("images/background_blue.svg") no-repeat center/cover;
  width: 100vw;
  min-height: 812px;
  height: 100vh;
}

.card-strap {
  position: absolute;
  z-index: 2;
  left: calc(50% - 32px);
}

.card-strap-pocket {
  position: absolute;
  z-index: 1;
  top: 154px;
  left: calc(50% - 40px);
}

.container {
  max-width: 250px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;

  border-radius: 10px;

  color: var(--gray);
}

.avatar {
  width: 10rem;
  margin: 11.5rem auto 0 auto;

  position: relative;
}

.avatar span {
  position: absolute; /*allows for sobreposition of pictures*/
  top: -15px;
  z-index: 1;
}

.avatar > img {
  width: 10rem;
  height: 11.5rem;
  object-fit: cover;

  clip-path: polygon(0 25%, 51% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);

}

h1 {
  font-size: 1.5rem;

  margin-top: 1.5rem;
}

a {
  color: var(--gray);
  text-decoration: none;

  margin-top: 0.25rem;

  display: flex;
  gap: 0.75rem;
  justify-content: center;
  align-items: center;
}

p {
  margin-top: 2rem;
}

ul {
  margin-top: 4rem;

  list-style: none;
  padding: 0;

  display: flex;
  gap: 0.5rem;

  justify-content: center;
}

/*TODO: fix card resizing causing profile picture to disalign*/


@media (min-width: 700px) {

  :root {
    font-size: 62.5%; /*1 rem equivale a 10px*/
  }

  main {
    background: url("images/background_blue_desktop.svg") no-repeat center/cover;
    height: 100%;
    width: 100%;
  }

  .container {
    background: url("images/background_blue.svg") center/cover;
    max-width: 358px;
    height: 540px;
  }

  .avatar {
    margin-top: 14rem;
    padding-top: 5.4rem;

    width: 16rem;
  }

  .avatar span {
    top: 3.9rem;
  }

  .avatar > img {
    width: 16rem;
    height: 18.4rem;
  }

  .container h1 {
    margin-top: 2.4rem;

    font: 700 2.4rem Roboto;
  }

  .container a {
    font: 400 1.6rem Roboto;

    gap: 1.2rem;
  }

  .container p {
    font: 400 1.4rem Roboto;
    max-width: 300px;
    margin: 3.2rem auto 0 auto;
  }

  /*TODO: create strap element*/
  
}

